scripts: Package DTBOs into dtbo.img using mkdtboimg
 re-direct the dtbo logic to mkdtboimg tool as mkdtimg is deprecated

Co-authored-by: Divyanshu-Modi <divyan.m05@gmail.com>
Signed-off-by: Daniel Mentz <danielmentz@google.com>
Change-Id: I797e4121e8bf0ebccabeb365c6b577714e40aa43
Signed-off-by: Will McVicker <willmcvicker@google.com>
Signed-off-by: Divyanshu-Modi <divyan.m05@gmail.com>

--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -182,7 +182,7 @@ ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
 export DTC_FLAGS := -@
 endif
 
-all:	$(KBUILD_DTBS) $(KBUILD_TARGET)
+all:	$(KBUILD_DTBS) $(KBUILD_TARGET) dtbo.img
 
 Image: vmlinux
 	$(Q)$(MAKE) $(build)=$(boot) $(boot)/$@
@@ -201,6 +201,9 @@ PHONY += dtbs dtbs_install
 dtbs: prepare scripts
 #	$(Q)$(MAKE) $(build)=$(boot)/dts
 	$(Q)$(MAKE) $(build)=$(boot)/dts/samsung
+
+dtbo.img: scripts dtbs
+	$(Q)$(MAKE) $(build)=$(boot) $(boot)/$@
 
 dtbs_install:
 	$(Q)$(MAKE) $(dtbinst)=$(boot)/dts
