--- a/arch/arm64/boot/dts/qcom/sm8150-gpu-v2.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150-gpu-v2.dtsi
@@ -14,6 +14,16 @@
 	gpu_opp_table_v2: gpu_opp_table_v2 {
 		compatible = "operating-points-v2";
 
+		opp-810000000 {
+			opp-hz = /bits/ 64 <810000000>;
+			opp-microvolt = <RPMH_REGULATOR_LEVEL_TURBO>;
+		};
+
+		opp-765000000 {
+			opp-hz = /bits/ 64 <765000000>;
+			opp-microvolt = <RPMH_REGULATOR_LEVEL_NOM_L2>;
+		};
+
 		opp-675000000 {
 			opp-hz = /bits/ 64 <675000000>;
 			opp-microvolt = <RPMH_REGULATOR_LEVEL_NOM_L1>;
@@ -42,6 +52,11 @@
 		opp-257000000 {
 			opp-hz = /bits/ 64 <257000000>;
 			opp-microvolt = <RPMH_REGULATOR_LEVEL_LOW_SVS>;
+		};
+
+		opp-195000000 {
+			opp-hz = /bits/ 64 <195000000>;
+			opp-microvolt = <RPMH_REGULATOR_LEVEL_MIN_SVS>;
 		};
 	};
 };
