staging: Add qcacld-3.0 to the build
The qcacld-3.0 Kconfig is no longer used, so we shouldn't source it.

Change-Id: Ia145c8ea4bd7ecc617e5fea5bd5415dc2fe9a7b8

--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -122,4 +122,10 @@ source "drivers/staging/pi433/Kconfig"
 
 source "drivers/staging/sti/Kconfig"
 
+config QCA_CLD_WLAN
+	tristate "Qualcomm Atheros CLD WLAN module"
+	default n
+	help
+	  Add support for the Qualcomm Atheros CLD WLAN module.
+
 endif # STAGING
