ARM64: dts: sm8150: disable kpti
As per qualcomm - "SM8150/SM8250/SM8350/SM7250/SM7150/SM6150 - KPTI Not
required".
It can also help increase performance by a lot in some scenarios.

Signed-off-by: Kuba Wojciechowski <nullbytepl@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sm8150.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150.dtsi
@@ -546,7 +546,7 @@
 	};
 
 	chosen {
-		bootargs = "noirqdebug rcu_nocbs=0-7 cgroup.memory=nokmem,nosocket";
+		bootargs = "noirqdebug rcu_nocbs=0-7 cgroup.memory=nokmem,nosocket kpti=off";
 	};
 
 	soc: soc { };
