--- a/arch/arm64/configs/r3q_defconfig
+++ b/arch/arm64/configs/r3q_defconfig
@@ -41,6 +41,7 @@ CONFIG_EMBEDDED=y
 CONFIG_PROFILING=y
 CONFIG_JUMP_LABEL=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
+# CONFIG_THINLTO is not set
 CONFIG_LTO_CLANG=y
 CONFIG_SHADOW_CALL_STACK=y
 CONFIG_SHADOW_CALL_STACK_VMAP=y
