--- a/arch/arm64/configs/r3q_defconfig
+++ b/arch/arm64/configs/r3q_defconfig
@@ -33,12 +33,14 @@ CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
-CONFIG_KALLSYMS_ALL=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_EMBEDDED=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PROFILING=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
+CONFIG_LTO_CLANG=y
+CONFIG_SHADOW_CALL_STACK=y
+CONFIG_SHADOW_CALL_STACK_VMAP=y
 CONFIG_REFCOUNT_FULL=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
@@ -55,6 +57,14 @@ CONFIG_ARCH_SM8150=y
 CONFIG_PCI=y
 CONFIG_PCI_MSM=y
 CONFIG_PCI_MSM_MSI=y
+# CONFIG_CAVIUM_ERRATUM_22375 is not set
+# CONFIG_CAVIUM_ERRATUM_23154 is not set
+# CONFIG_CAVIUM_ERRATUM_27456 is not set
+# CONFIG_CAVIUM_ERRATUM_30115 is not set
+# CONFIG_QCOM_FALKOR_ERRATUM_1003 is not set
+# CONFIG_QCOM_FALKOR_ERRATUM_1009 is not set
+# CONFIG_QCOM_QDF2400_ERRATUM_0065 is not set
+# CONFIG_QCOM_FALKOR_ERRATUM_E1041 is not set
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_PREEMPT=y
@@ -65,7 +75,6 @@ CONFIG_ZSMALLOC=y
 CONFIG_PGTABLE_MAPPING=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_SECCOMP=y
-CONFIG_OKL4_GUEST=y
 # CONFIG_UNMAP_KERNEL_AT_EL0 is not set
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
@@ -79,6 +88,7 @@ CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
 CONFIG_KRYO_PMU_WORKAROUND=y
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
+CONFIG_BINFMT_MISC=y
 CONFIG_COMPAT=y
 CONFIG_SEC_R3Q_PROJECT=y
 CONFIG_MACH_R3Q_KOR_SINGLE=y
@@ -120,6 +130,8 @@ CONFIG_INET_UDP_DIAG=y
 CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
 CONFIG_DEFAULT_BIC=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
@@ -132,6 +144,7 @@ CONFIG_IPV6_VTI=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
 CONFIG_NETFILTER=y
+CONFIG_BRIDGE_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_SECMARK=y
 CONFIG_NF_CONNTRACK_EVENTS=y
@@ -265,9 +278,7 @@ CONFIG_ESE_SECURE=y
 CONFIG_ESE_SPI_GPIO_START=23
 CONFIG_ESE_SPI_GPIO_END=26
 CONFIG_ESE_SPI_NUMBER=3
-CONFIG_SEC_NFC_LOGGER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
-CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
 CONFIG_DMA_CMA=y
 CONFIG_MHI_BUS=y
 CONFIG_MHI_QCOM=y
@@ -284,7 +295,6 @@ CONFIG_HDCP_QSEECOM=y
 CONFIG_QSEECOM=y
 CONFIG_UID_SYS_STATS=y
 CONFIG_MEMORY_STATE_TIME=y
-CONFIG_OKL4_USER_VIRQ=y
 CONFIG_DEV_RIL_BRIDGE=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
@@ -295,9 +305,6 @@ CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_SCSI_UFSHCD=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
 CONFIG_SCSI_UFS_QCOM=y
-CONFIG_UFS_DATA_LOG=y
-CONFIG_UFS_DATA_LOG_MAGIC_CODE=y
-CONFIG_SCSI_UFSHCD_CMD_LOGGING=y
 CONFIG_SCSI_UFS_CRYPTO=y
 CONFIG_SCSI_UFS_CRYPTO_QTI=y
 CONFIG_MD=y
@@ -307,6 +314,7 @@ CONFIG_DM_DEFAULT_KEY=y
 CONFIG_DM_UEVENT=y
 CONFIG_DM_VERITY=y
 CONFIG_DM_VERITY_FEC=y
+CONFIG_DM_INTEGRITY=y
 CONFIG_DM_ANDROID_VERITY_AT_MOST_ONCE_DEFAULT_ENABLED=y
 CONFIG_DM_BOW=y
 CONFIG_NETDEVICES=y
@@ -337,13 +345,11 @@ CONFIG_USB_NET_CDC_EEM=y
 CONFIG_USB_NET_CDC_MBIM=y
 CONFIG_USB_NET_SMSC75XX=y
 CONFIG_USB_NET_SMSC95XX=y
-CONFIG_WIL6210=m
 # CONFIG_BCM_DHD_WLAN is not set
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_CNSS_GENL=y
 CONFIG_INPUT_EVDEV=y
-CONFIG_SEC_DEBUG_TSP_LOG=y
 CONFIG_INPUT_TOUCHSCREEN_TCLMV2=y
 CONFIG_INPUT_SEC_SECURE_TOUCH=y
 CONFIG_TOUCHSCREEN_DUMP_MODE=y
@@ -374,8 +380,6 @@ CONFIG_HW_RANDOM_MSM_LEGACY=y
 CONFIG_DIAG_CHAR=y
 CONFIG_MSM_FASTCVPD=y
 CONFIG_MSM_ADSPRPC=y
-CONFIG_MSM_RDBG=m
-CONFIG_OKL4_PIPE=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_GPIO=y
 CONFIG_I2C_QCOM_GENI=y
@@ -383,9 +387,7 @@ CONFIG_SPI=y
 CONFIG_SPI_QCOM_GENI=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_SPMI=y
-CONFIG_SPMI_MSM_PMIC_ARB_DEBUG=y
 CONFIG_SLIMBUS_MSM_NGD=y
-CONFIG_SLIMBUS_DEBUG=y
 CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 CONFIG_PINCTRL_SM8150=y
 CONFIG_SENSORS_FP_SPI_GPIO_END=3
@@ -429,25 +431,24 @@ CONFIG_REGULATOR_S2DOS05=y
 CONFIG_REGULATOR_REFGEN=y
 CONFIG_REGULATOR_RPMH=y
 CONFIG_REGULATOR_STUB=y
+# CONFIG_IR_MSM_GENI is not set
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
-CONFIG_VIDEO_ADV_DEBUG=y
 CONFIG_VIDEO_FIXED_MINOR_RANGES=y
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=y
+# CONFIG_USB_GSPCA is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_SPECTRA_CAMERA=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
-CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
 CONFIG_MSM_NPU=y
 CONFIG_SAMSUNG_REAR_TRIPLE=y
 CONFIG_CAMERA_SYSFS_V2=y
-CONFIG_USE_CAMERA_HW_BIG_DATA=y
 CONFIG_SAMSUNG_HW_SOFTLANDING=y
 CONFIG_SAMSUNG_ACTUATOR_DW9808=y
 CONFIG_MCLK_I2C_DELAY=y
@@ -455,18 +456,11 @@ CONFIG_MCLK_I2C_DELAY_FOR_CAM_POWERDOWN=y
 CONFIG_DRM=y
 CONFIG_DISPLAY_SAMSUNG=y
 CONFIG_PANEL_S6E3FC2_AMS670TA01_FHD=y
-CONFIG_DRM_MSM_REGISTER_LOGGING=y
-CONFIG_DRM_SDE_EVTLOG_DEBUG=y
 CONFIG_DRM_SDE_RSC=y
 CONFIG_SEC_DISPLAYPORT=y
-CONFIG_SEC_DISPLAYPORT_BIGDATA=y
-CONFIG_SEC_DISPLAYPORT_LOGGER=y
 CONFIG_DRM_LT_LT9611=y
 CONFIG_FB_ARMCLCD=y
 CONFIG_LCD_CLASS_DEVICE=y
-CONFIG_LOGO=y
-# CONFIG_LOGO_LINUX_MONO is not set
-# CONFIG_LOGO_LINUX_VGA16 is not set
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_DYNAMIC_MINORS=y
@@ -590,7 +584,6 @@ CONFIG_USB_DUN_SUPPORT=y
 CONFIG_USB_HOST_NOTIFY=y
 CONFIG_USB_NOTIFY_LAYER=y
 CONFIG_USB_NOTIFIER=y
-CONFIG_USB_DEBUG_DETAILED_LOG=y
 CONFIG_USB_STORAGE_DETECT=y
 CONFIG_USB_HMT_SAMSUNG_INPUT=y
 CONFIG_USB_EXTERNAL_NOTIFY=y
@@ -604,7 +597,6 @@ CONFIG_MMC=y
 CONFIG_MMC_PERF_PROFILING=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
-CONFIG_MMC_TEST=m
 CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
@@ -625,13 +617,6 @@ CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ION=y
-CONFIG_SEC_HQM_DEVICE=y
-CONFIG_SEC_HEAVY_TASK_CPU=y
-CONFIG_SEC_STI=y
-CONFIG_SEC_ABC=y
-CONFIG_SEC_ABC_HUB=y
-CONFIG_SEC_ABC_HUB_COND=y
-CONFIG_SEC_ABC_HUB_BOOTC=y
 CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCOM_GENI_SE=y
 CONFIG_QPNP_REVID=y
@@ -644,8 +629,6 @@ CONFIG_RMNET_IPA3=y
 CONFIG_RNDIS_IPA=y
 CONFIG_IPA3_MHI_PROXY=y
 CONFIG_IPA3_MHI_PRIME_MANAGER=y
-CONFIG_IPA_UT=y
-CONFIG_MSM_11AD=m
 CONFIG_SEEMP_CORE=y
 CONFIG_IPA3_REGDUMP=y
 CONFIG_QCOM_MDSS_PLL=y
@@ -662,23 +645,18 @@ CONFIG_MSM_CLK_RPMH=y
 CONFIG_MSM_GPUCC_SM8150=y
 CONFIG_HWSPINLOCK=y
 CONFIG_HWSPINLOCK_QCOM=y
+# CONFIG_FSL_ERRATUM_A008585 is not set
 CONFIG_QCOM_APCS_IPC=y
 CONFIG_MSM_QMP=y
 CONFIG_IOMMU_IO_PGTABLE_FAST=y
 CONFIG_ARM_SMMU=y
 CONFIG_QCOM_LAZY_MAPPING=y
-CONFIG_IOMMU_DEBUG=y
-CONFIG_IOMMU_DEBUG_TRACKING=y
-CONFIG_IOMMU_TESTS=y
 CONFIG_RPMSG_CHAR=y
 CONFIG_RPMSG_QCOM_GLINK_SMEM=y
 CONFIG_RPMSG_QCOM_GLINK_SPSS=y
 CONFIG_RPMSG_QCOM_GLINK_SPI=y
-CONFIG_QCOM_CPUSS_DUMP=y
-CONFIG_QCOM_RUN_QUEUE_STATS=y
 CONFIG_QCOM_LLCC=y
 CONFIG_QCOM_SM8150_LLCC=y
-CONFIG_QCOM_LLCC_PERFMON=m
 CONFIG_QCOM_QMI_HELPERS=y
 CONFIG_QCOM_QMI_RMNET=y
 CONFIG_QCOM_QMI_DFC=y
@@ -714,7 +692,6 @@ CONFIG_QSEE_IPC_IRQ_BRIDGE=y
 CONFIG_QCOM_GLINK=y
 CONFIG_QCOM_GLINK_PKT=y
 CONFIG_QCOM_QDSS_BRIDGE=y
-CONFIG_QTI_RPM_STATS_LOG=y
 CONFIG_MSM_CDSP_LOADER=y
 CONFIG_QCOM_SMCINVOKE=y
 CONFIG_MSM_EVENT_TIMER=y
@@ -724,13 +701,11 @@ CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_CP_DYNAMIC_MEM_RESERVE=y
 CONFIG_RMNET_CTL=y
 CONFIG_MSM_PERFORMANCE=y
-CONFIG_QMP_DEBUGFS_CLIENT=y
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
 CONFIG_QCOM_CDSP_RM=y
 CONFIG_QCOM_AOP_DDR_MESSAGING=y
 CONFIG_QTI_CRYPTO_COMMON=y
 CONFIG_QTI_CRYPTO_TZ=y
-CONFIG_QCOM_HYP_CORE_CTL=y
 CONFIG_DEVFREQ_GOV_PASSIVE=y
 CONFIG_QCOM_BIMC_BWMON=y
 CONFIG_ARM_MEMLAT_MON=y
@@ -753,6 +728,7 @@ CONFIG_QCOM_LLCC_PMU=y
 CONFIG_RAS=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDERFS=y
 CONFIG_NVMEM_SPMI_SDAM=y
 CONFIG_SENSORS=y
 CONFIG_SENSORS_SSC=y
@@ -762,7 +738,6 @@ CONFIG_ESOC_DEV=y
 CONFIG_ESOC_CLIENT=y
 CONFIG_ESOC_MDM_4x=y
 CONFIG_ESOC_MDM_DRV=y
-CONFIG_ESOC_MDM_DBG_ENG=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
 CONFIG_SEC_BSP=y
 CONFIG_DRV_SAMSUNG=y
@@ -771,18 +746,8 @@ CONFIG_SEC_PARAM=y
 CONFIG_SEC_SYSUP=y
 CONFIG_SEC_LOG_LAST_KMSG=y
 CONFIG_SEC_LOG_STORE_LAST_KMSG=y
-CONFIG_SEC_DEBUG_SCHED_LOG=y
-CONFIG_SEC_USER_RESET_DEBUG=y
-CONFIG_SEC_PERIPHERAL_SECURE_CHK=y
-CONFIG_SEC_SSR_DEBUG_LEVEL_CHK=y
-CONFIG_SEC_DEBUG_DUMP_TASK_STACK=y
-CONFIG_SEC_DEBUG_MDM_FILE_INFO=y
-CONFIG_SEC_DEBUG_MODULE_INFO=y
-CONFIG_SEC_BOOTSTAT=y
-CONFIG_ARGOS=y
 CONFIG_SEC_MISC=y
 CONFIG_SEC_SMEM=y
-CONFIG_SEC_DEBUG_APPS_CLK_LOGGING=y
 CONFIG_VBUS_NOTIFIER=y
 CONFIG_BATTERY_SAMSUNG=y
 CONFIG_BATTERY_SAMSUNG_V2=y
@@ -838,7 +803,7 @@ CONFIG_MOTOR_DRV_MAX77705=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_SENSORS_FINGERPRINT=y
 CONFIG_SENSORS_ET7XX=y
-CONFIG_MSM_TZ_LOG=y
+# CONFIG_GATOR is not set
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
@@ -846,6 +811,7 @@ CONFIG_EXT4_ENCRYPTION=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_ENCRYPTION=y
+CONFIG_F2FS_FS_COMPRESSION=y
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
 CONFIG_QUOTA=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
@@ -855,7 +821,6 @@ CONFIG_INCREMENTAL_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_NTFS_FS=y
-CONFIG_NTFS_DEBUG=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_ECRYPT_FS=y
 CONFIG_ECRYPT_FS_MESSAGING=y
@@ -868,40 +833,34 @@ CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 CONFIG_PRINTK_TIME=y
-CONFIG_DEBUG_INFO=y
-CONFIG_PAGE_OWNER=y
+CONFIG_DEBUG_SECTION_MISMATCH=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_TIMEOUT=-1
-CONFIG_SCHEDSTATS=y
-# CONFIG_DEBUG_PREEMPT is not set
-CONFIG_DEBUG_BUGVERBOSE=y
-CONFIG_IPC_LOGGING=y
 CONFIG_QCOM_RTB=y
 CONFIG_QCOM_RTB_SEPARATE_CPUS=y
-CONFIG_DEBUG_ALIGN_RODATA=y
-CONFIG_SEC_PM_DEBUG=y
+CONFIG_FTRACE=y
+CONFIG_FUNCTION_TRACER=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
-CONFIG_LSM_MMAP_MIN_ADDR=4096
+CONFIG_SECURITY_NETWORK=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_FORTIFY_SOURCE=y
 CONFIG_SECURITY_SELINUX=y
-CONFIG_SECURITY_SMACK=y
 CONFIG_INTEGRITY_SIGNATURE=y
 CONFIG_INTEGRITY_ASYMMETRIC_KEYS=y
-CONFIG_CRYPTO_FIPS=y
-# CONFIG_CRYPTO_MANAGER_DISABLE_TESTS is not set
-CONFIG_CRYPTO_TEST=m
 CONFIG_CRYPTO_GCM=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_LZ4=y
+CONFIG_CRYPTO_LZ4HC=y
+CONFIG_CRYPTO_ZSTD=y
 CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_ARM64_CRYPTO=y
+CONFIG_CRYPTO_SHA512_ARM64=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
+CONFIG_CRYPTO_CRC32_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
-CONFIG_STACK_HASH_ORDER_SHIFT=12
