ARM64: defconfig: Give it a better name

--- a/arch/arm64/configs/r3q_defconfig
+++ b/arch/arm64/configs/r3q_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Grass-perf"
+CONFIG_LOCALVERSION="-Grass,SD855-Perf+"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
