--- a/.github/workflows/build_kernel.yml
+++ b/.github/workflows/build_kernel.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run build
         run: |
-          bash build_kernel.sh
+          bash build_kernel.sh thin
 
       - name: Package
         run: |
