--- a/arch/arm64/configs/r3q_defconfig
+++ b/arch/arm64/configs/r3q_defconfig
@@ -52,6 +52,7 @@ CONFIG_MODULE_SIG_SHA512=y
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_CFQ_GROUP_IOSCHED=y
+CONFIG_DEFAULT_NOOP=y
 CONFIG_ARCH_QCOM=y
 CONFIG_ARCH_SM8150=y
 CONFIG_PCI=y
@@ -313,6 +314,7 @@ CONFIG_SCSI_UFS_CRYPTO=y
 CONFIG_SCSI_UFS_CRYPTO_QTI=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
+CONFIG_DM_MQ_DEFAULT=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_DEFAULT_KEY=y
 CONFIG_DM_UEVENT=y
