ARM64: defconfig: Built-in rmnet modules, Enable BPF JIT

--- a/arch/arm64/configs/r3q_defconfig
+++ b/arch/arm64/configs/r3q_defconfig
@@ -268,6 +268,7 @@ CONFIG_QRTR_SMD=y
 CONFIG_QRTR_MHI=y
 CONFIG_QRTR_FIFO=y
 CONFIG_WIREGUARD=y
+CONFIG_BPF_JIT=y
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_BT=y
 CONFIG_MSM_BT_POWER=y
@@ -872,3 +873,5 @@ CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
 CONFIG_CRYPTO_CRC32_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
+CONFIG_RMNET_PERF=y
+CONFIG_RMNET_SHS=y
