f2fs: Set a default fake kernel version

--- a/fs/f2fs/Kconfig
+++ b/fs/f2fs/Kconfig
@@ -154,7 +154,9 @@ config F2FS_REPORT_FAKE_KERNEL_VERSION
 config F2FS_FAKE_KERNEL_RELEASE
 	string "Kernel release for fsck.f2fs"
 	depends on F2FS_REPORT_FAKE_KERNEL_VERSION
+	default "6.6.4"
 
 config F2FS_FAKE_KERNEL_VERSION
 	string "Kernel version for fsck.f2fs"
 	depends on F2FS_REPORT_FAKE_KERNEL_VERSION
+	default "-arm64v2-xanmod1-1"
