ARM64: defconfig: Regen, update localversion
- Also set fake f2fs uname config

--- a/arch/arm64/configs/r3q_defconfig
+++ b/arch/arm64/configs/r3q_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Grass,SD855-Perf+"
+CONFIG_LOCALVERSION="-ShareMyPerf"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_NO_HZ=y
@@ -490,7 +490,6 @@ CONFIG_QTI_QMI_SENSOR=y
 CONFIG_REGULATOR_COOLING_DEVICE=y
 CONFIG_QTI_BCL_PMIC5=y
 CONFIG_QTI_ADC_TM=y
-CONFIG_SEC_EXT_THERMAL_MONITOR=y
 CONFIG_WATCHDOG=y
 CONFIG_SOFT_WATCHDOG=y
 CONFIG_MFD_I2C_PMIC=y
@@ -884,6 +883,7 @@ CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_FS_ENCRYPTION=y
 CONFIG_F2FS_FS_COMPRESSION=y
+CONFIG_F2FS_REPORT_FAKE_KERNEL_VERSION=y
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
 CONFIG_FS_VERITY=y
 CONFIG_FS_VERITY_BUILTIN_SIGNATURES=y
@@ -918,7 +918,6 @@ CONFIG_QCOM_RTB=y
 CONFIG_QCOM_RTB_SEPARATE_CPUS=y
 CONFIG_FTRACE=y
 CONFIG_FUNCTION_TRACER=y
-CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_HARDENED_USERCOPY=y
@@ -926,7 +925,6 @@ CONFIG_FORTIFY_SOURCE=y
 CONFIG_SECURITY_SELINUX=y
 CONFIG_INTEGRITY_SIGNATURE=y
 CONFIG_INTEGRITY_ASYMMETRIC_KEYS=y
-CONFIG_INIT_STACK_ALL=y
 CONFIG_CRYPTO_GCM=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_LZO=y
