drivers: Add back spu_verify driver

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -257,4 +257,6 @@ source "drivers/gator/Kconfig"
 
 source "drivers/security/samsung/tzic/Kconfig"
 
+source "drivers/spu_verify/Kconfig"
+
 endmenu
