ARM64: defconfigs: Enable essential tracers

--- a/arch/arm64/configs/r5q_defconfig
+++ b/arch/arm64/configs/r5q_defconfig
@@ -929,6 +929,8 @@ CONFIG_QCOM_RTB=y
 CONFIG_QCOM_RTB_SEPARATE_CPUS=y
 CONFIG_FTRACE=y
 CONFIG_FUNCTION_TRACER=y
+CONFIG_PREEMPT_TRACER=y
+CONFIG_SCHED_TRACER=y
 CONFIG_SECURITY=y
 CONFIG_LSM_MMAP_MIN_ADDR=4096
 CONFIG_HARDENED_USERCOPY=y
