--- a/arch/arm64/configs/r3q_defconfig
+++ b/arch/arm64/configs/r3q_defconfig
@@ -915,6 +915,8 @@ CONFIG_QCOM_RTB=y
 CONFIG_QCOM_RTB_SEPARATE_CPUS=y
 CONFIG_FTRACE=y
 CONFIG_FUNCTION_TRACER=y
+CONFIG_PREEMPT_TRACER=y
+CONFIG_SCHED_TRACER=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_HARDENED_USERCOPY=y
