--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "KernelSU"]
 	path = KernelSU
 	url = https://github.com/tiann/KernelSU
+[submodule "AnyKernel3"]
+	path = AnyKernel3
+	url = https://github.com/Roynas-Android-Playground/kernel_packaging_anykernel3
